# underscore

./: .gitignore  README.md  SETUP_AND_SECRETS.md  amplify.yml  design.md  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml  requirements.md  samconfig.toml  template.yaml
.aws-sam/: build.toml
app/: page.tsx
app/api/expand-node/: route.ts
app/api/generate-map/: route.ts
app/api/knowledge-card/: route.ts
backend/: main.py  requirements.txt
backend/api/: papers.py  projects.py
backend/core/: config.py
backend/db/: graph_schema.py  models.py
backend/schemas/: ingestion.py
backend/services/: aws_service.py  grobid.py  llm_extraction.py  pdf_processing.py  vector_service.py
backend/workers/: health_tasks.py  tasks_graph.py  tasks_reasoning.py
components/: CustomNode.tsx  GraphCanvas.tsx  KnowledgeCard.tsx
components/ui/: button.tsx  input.tsx  modal.tsx
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/ideas/: page.tsx
frontend/src/app/projects/: page.tsx
frontend/src/components/: GraphView.tsx  Layout.tsx  ResearchChat.tsx  Sidebar.tsx
frontend/src/hooks/: useResizeObserver.ts
frontend/src/pages/: IdeaDetail.tsx  IdeasPage.tsx  ProjectWorkspace.tsx  ProjectsPage.tsx  ResearchPage.tsx  TasksPage.tsx
frontend_new/src/components/: CreateTaskModal.tsx  GlassCard.tsx  GraphView.tsx  PDFUploader.tsx  PageTransition.tsx
lib/: config.ts  gemini.ts  store.ts  types.ts  utils.ts
(+6 files in other folders)
